cmake_minimum_required(VERSION 3.20)
project(CPP)

set(CMAKE_CXX_STANDARD 20)

add_executable(CPP main.cpp extern_learn.cpp header_learn.cpp header_learn.h tuple_learn.cpp tuple_learn.h loop_learn.cpp loop_learn.h class_learn.cpp class_learn.h reference_learn.cpp reference_learn.h auto_learn.cpp auto_learn.h)
